plugins {
    id 'eclipse'
    id 'net.neoforged.moddev' version '2.0.95'
}

version = '1.0'
base.archivesName = 'crystalnexus'

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven { url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
    maven {
        name = "Progwml6's maven"
        url = 'https://dvs1.progwml6.com/files/maven/'
    }
    maven {
        name = "Jared's maven"
        url = 'https://maven.blamejared.com/'
    }
    maven { url = 'https://modmaven.dev' }
    maven { url = 'https://maven.terraformersmc.com/' }
}

dependencies {
    implementation 'software.bernie.geckolib:geckolib-neoforge-1.21.1:4.7.6'
    compileOnly 'org.appliedenergistics:appliedenergistics2:19.2.17:api'
    compileOnly 'mezz.jei:jei-1.21.1-common-api:19.21.0.247'
    compileOnly 'mezz.jei:jei-1.21.1-neoforge-api:19.21.0.247'
    runtimeOnly 'mezz.jei:jei-1.21.1-neoforge:19.21.0.247'
    compileOnly 'dev.emi:emi-neoforge:1.1.22+1.21.1:api'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
}

neoForge {
    version = "21.1.190"

    runs {
        client {
            client()
        }
        server {
            server()
        }
        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.findProperty('gameTestNamespace') ?: 'crystalnexus,crystalnexus_assembly'
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        crystalnexus {
            sourceSet sourceSets.main
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('test') {
    useJUnitPlatform()
}
